--- a/services/user/ui/index.html
+++ b/services/user/ui/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title>Request a ride - Ride App</title>
+    <link rel="icon" type="image/jpg" href="rideapp-icon.jpg" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/1.1.2/tailwind.min.css" integrity="sha256-bCQF5OufWlWM/MW9mCb/eDibvff1W8BNq9ZK69C8FSI=" crossorigin="anonymous" />
   </head>
   <body>
